[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sunkit_magex"
description = "Solar Magnetic field Extrapolation"
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
  { name = "David Stansby" },
]
dependencies = [
  "astropy>=5.3.0",
  "numpy>=1.23.5",
  "scikit-image>=0.19.0",
  "scipy>=1.10.1",
  "streamtracer>=2.2.0",
  "sunpy[map]>=6.0",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
  "pytest-arraydiff",
  "parfive",
  "reproject",
  "sunkit-magex[all]",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "reproject",
  "sphinx-gallery",
  "sunpy[net]>=6.0",
  "sunpy-sphinx-theme",
  "sunkit-magex[all]",
  "sphinx-changelog",
]
performance = [
  "numba",
]
analytic = [
  "sympy",
]
all = ["sunkit-magex[performance,analytic]"]
dev = ["sunkit-magex[all,tests,docs]"]

[project.urls]
Homepage = "https://sunpy.org"
Download = "https://pypi.org/project/sunkit-magex/"
"Source Code" = "https://github.com/sunpy/sunkit-magex/"
Documentation = "https://docs.sunpy.org/projects/sunkit-magex/en/stable/"
Changelog = "https://docs.sunpy.org/en/stable/whatsnew/changelog.html"
"Issue Tracker" = "https://github.com/sunpy/sunkit-magex/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["sunkit_magex._dev*"]

[tool.setuptools_scm]
write_to = "sunkit_magex/_version.py"

# TODO: This should be in towncrier.toml but Giles currently only works looks in
# pyproject.toml we should move this back when it's fixed.
[tool.towncrier]
  package = "sunkit_magex"
  filename = "CHANGELOG.rst"
  directory = "changelog/"
  issue_format = "`#{issue} <https://github.com/sunkit_magex/sunkit_magex/pull/{issue}>`__"
  title_format = "{version} ({project_date})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "New Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Internal Changes"
  showcontent = true
